<resources>
    <string name="app_name">Plant App Hubx</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_plantapp">Welcome to <b>PlantApp</b></string>
    <string name="identify_more_than_3000_plants_and_88_accuracy">Identify more than 3000+ plants and 88% accuracy.</string>
    <string name="by_tapping_text">By tapping next, you are agreeing to PlantID\n<u>Terms of Use</u> &amp; <u>Privacy Policy</u>.</string>
    <string name="take_a_photo_to_identify_the_plant">Take a photo to <b>identify</b>\nthe plant!</string>
    <string name="_continue">Continue</string>
    <string name="get_plant_care_guides">Get plant <b>care guides</b></string>
    <string name="access_all_features">Access All Features</string>
    <string name="plantapp_premium"><b>PlantApp</b> Premium</string>
    <string name="after_the_3_day_free_trial_period_you_ll_be_charged_274_99_per_year_unless_you_cancel_before_the_trial_expires_yearly_subscription_is_auto_renewable">After the 3-day free trial period you’ll be charged ₺274.99 per year unless you\ncancel before the trial expires. Yearly Subscription is Auto-Renewable</string>
    <string name="terms_privacy_restore">Terms • Privacy • Restore</string>
    <string name="try_free_for_3_days">Try free for 3 days</string>
    <string name="hi_plant_lover">Hi, plant lover!</string>
    <string name="good_afternoon"><b>Good Afternoon!</b> ⛅</string>
    <string name="tap_to_upgrade_your_account">Tap to upgrade your account!</string>
    <string name="free_premium_available">FREE Premium Available</string>
    <string name="first_3_days_free_then_529_99_year">First 3 days free, then $529,99/year</string>
    <string name="_1_year">1 Year</string>
    <string name="_1_month">1 Month</string>
    <string name="_2_99_month_auto_renewable">$2.99/month, auto renewable</string>
    <string name="how_to_identify_plants_easily_with_plantapp">How to identify plants easily with PlantApp?</string>
    <string name="edible_plants">Edible Plants</string>
    <string name="my_garden">My Garden</string>
    <string name="diagnose">Diagnose</string>
    <string name="home">Home</string>
    <string name="profile_coming_soon">Profile Coming Soon!</string>
    <string name="diagnose_coming_soon">Diagnose Coming Soon!</string>
    <string name="my_garden_coming_soon">My Garden Coming Soon!</string>
    <string name="profile">Profile</string>
</resources>