<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/get_started_background_image"
    tools:context=".ui.onboardings.GetStartedFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size8"
        android:layout_marginTop="@dimen/size23"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:text="@string/welcome_to_plantapp"
        android:textSize="@dimen/font_size_28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitleText"
        android:layout_width="@dimen/size0"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/identify_more_than_3000_plants_and_88_accuracy"
        android:textColor="@color/semi_transparent_dark_green"
        android:textSize="@dimen/font_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <ImageView
        android:id="@+id/pageImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size0"
        android:src="@drawable/get_started_image"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size16"
        android:layout_marginEnd="@dimen/size16"
        app:cardBackgroundColor="@color/onboarding_button"
        app:cardCornerRadius="@dimen/size6"
        app:cardElevation="@dimen/size1"
        android:layout_marginBottom="@dimen/size7"
        app:layout_constraintBottom_toTopOf="@+id/byTappingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/size9"
            android:text="@string/get_started"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_16"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/byTappingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineHeight="@dimen/size7"
        android:text="@string/by_tapping_text"
        android:layout_marginBottom="@dimen/size14"
        android:textColor="@color/semi_transparent_gray_green"
        android:textSize="@dimen/font_size_11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/getStartedButton"
        app:layout_constraintStart_toStartOf="@+id/getStartedButton" />

</androidx.constraintlayout.widget.ConstraintLayout>